# ScratchML

./: README.md  main.py  pyproject.toml
notebooks/: examples_and_sklearn_comparisons.html  examples_and_sklearn_comparisons.ipynb
scratchml/: __init__.py  cluster.py  ensemble.py  linear_model.py  neighbors.py  preprocessing.py  tree.py  utils.py
tests/: test_linear_models.py  test_preprocessing.py  test_tree_ensemble_and_cluster.py
