[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scratchml"
version = "0.1.0"
description = "A machine learning library built from scratch with NumPy."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[tool.setuptools]
packages = ["scratchml"]
